--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -154,6 +154,10 @@
 \let\Oldsubsubsection\subsubsection
 \renewcommand{\subsubsection}{\FloatBarrier\Oldsubsubsection}
 
+% Copyright
+% \def\registered{{\ooalign{\hfil\raise .00ex\hbox{\scriptsize R}\hfil\crcr\mathhexbox20D}} % used as: $^\registered$
+% \def\tm{\leavevmode\hbox{$\rm {}^{TM}$}} % used as: $^\tm$
+
 % Glossary
 % \usepackage[acronym, nomain, nopostdot, nonumberlist, nogroupskip, toc, automake=false]{glossaries}
 %\loadglsentries{glossary}
