--- a/system_id/plots/acc_sp.tex
+++ b/system_id/plots/acc_sp.tex
@@ -6,8 +6,8 @@
             ylabel = North acceleration setpoint,
             x unit = \si{\second},
             y unit = \si{\metre/\second},
-            xmin = 0,   xmax = 200,
-            ymin = -3,  ymax = 5,
+            xmin = 100,   xmax = 200,
+            ymin = -2,  ymax = 2,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -16,7 +16,7 @@
             label style = {font = \scriptsize},
             tick label style = {font = \scriptsize},
             width = 0.95\columnwidth,
-            height = 0.5\columnwidth,
+            height = 0.3\columnwidth,
             % initialize Dark2
             cycle list/Dark2,
             % combine it with 'mark list*':
@@ -25,7 +25,7 @@
             }
         ]
         
-        \addplot+[mark = none, style = solid, thick] 
+        \addplot+[mark = none, style = solid, ultra thick] 
         table[x = time, y = acc_sp, col sep = comma] 
         {system_id/csv/acc_sp_offset_SITL_x_vel_noise_l1_m0-2.csv.csv};
         % \addlegendentry{$A_{N,sp}$}
