--- a/system_id/plots/havok_vs_dmd_noise.tex
+++ b/system_id/plots/havok_vs_dmd_noise.tex
@@ -7,7 +7,7 @@
             x unit = \si{\second},
             % y unit = \si{\second},
             xmin = 0,     xmax = 120,
-            ymin = 0.08,  ymax = 0.12,
+            ymin = 0.085,  ymax = 0.12,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -40,5 +40,5 @@
     
     \caption{DMD and HAVOK prediction error for different lengths of noisy training data
     ($m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}).}
-    % \label{fig:havok_vs_dmd_noise}
+    \label{fig:havok_vs_dmd_noise}
 \end{figure}
