--- a/system_id/plots/different_state_vectors.tex
+++ b/system_id/plots/different_state_vectors.tex
@@ -7,7 +7,7 @@
             x unit = \si{\second},
             % y unit = \si{\second},
             xmin = 0,     xmax = 100,
-            ymin = 0.14, ymax = 0.28,
+            ymin = 0.13, ymax = 0.26,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -40,5 +40,5 @@
     
     \caption{Prediction MAE for HAVOK models using either angle or angular rate measurements 
     ($m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{1}{\meter}, $T_s =$~\SI{0.03}{\second}).}
-    \label{fig:SITL_MAE_vs_train_angular_rate}
+    \label{fig:different_state_vectors}
 \end{figure}
