--- a/system_id/plots/system_parameters.tex
+++ b/system_id/plots/system_parameters.tex
@@ -4,5 +4,6 @@
     \centering
     \input{system_id/plots/different_lengths.tex} % subfigure
     \input{system_id/plots/different_masses.tex} % subfigure
-    \caption{HAVOK prediction error for different system parameters}    
+    \caption{HAVOK prediction error for different system parameters}
+    \label{fig:system_parameters}  
 \end{figure}
