Wrote about length of training data and started double-descent

--- a/Thesis.bib
+++ b/Thesis.bib
@@ -115,6 +115,15 @@ title = {{Sparse identification of nonlinear dynamics for model predictive contr
 volume = {474},
 year = {2018}
 }
+@inproceedings{Nakkiran2019,
+author = {Nakkiran, Preetum and Kaplun, Gal and Bansal, Yamini and Yang, Tristan and Barak, Boaz and Sutskever, Ilya},
+booktitle = {International Conference on Learning Representations},
+file = {:home/esl/Masters/Articles/deep_double_descent_where_bigg-Original Pdf.pdf:pdf},
+keywords = {SGD,We show that a variety of modern deep learning tas,and conjecture a generalized double descent with r,as we increase model size,but also as a function of the number of training e,complexity,deep learning,double descent,optimization,our notion of model complexity allows us to identi,performance first gets worse and then gets  better,we show that double descent occurs not just as a f},
+mendeley-tags = {We show that a variety of modern deep learning tas,as we increase model size,performance first gets worse and then gets  better,we show that double descent occurs not just as a f,but also as a function of the number of training e,and conjecture a generalized double descent with r,our notion of model complexity allows us to identi},
+title = {{Deep Double Descent: Where Bigger Models and More Data Hurt}},
+year = {2020}
+}
 @article{Mangan2017,
 abstract = {We develop an algorithm for model selection which allows for the consideration of a combinatorially large number of candidate models governing a dynamical system. The innovation circumvents a disadvantage of standard model selection which typically limits the number of candidate models considered due to the intractability of computing information criteria. Using a recently developed sparse identification of nonlinear dynamics algorithm, the sub-selection of candidate models near the Pareto frontier allows feasible computation of Akaike information criteria (AIC) or Bayes information criteria scores for the remaining candidate models. The information criteria hierarchically ranks the most informative models, enabling the automatic and principled selection of the model with the strongest support in relation to the time-series data. Specifically, we show that AIC scores place each candidate model in the strong support, weak support or no support category. The method correctly recovers several canonical dynamical systems, including a susceptible-exposedinfectious-recovered disease model, Burgers' equation and the Lorenz equations, identifying the correct dynamical system as the only candidate model with strong support.},
 author = {Mangan, N. M. and Kutz, J. N. and Brunton, S. L. and Proctor, J. L.},
