--- a/system_id/plots/MAE_vs_Ts_vs_L.tex
+++ b/system_id/plots/MAE_vs_Ts_vs_L.tex
@@ -25,10 +25,10 @@
             }
         ]
 
-        \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = Ts, y = MAE_mean, col sep = comma] 
-        {system_id/csv/MAE_vs_Ts_SITL_x_vel_noise_l0-25_m0-2.csv_dmd_angle.csv};
-        \addlegendentry{$l =$~\SI{0.25}{\metre}}
+        % \addplot+[mark = none, style = solid, ultra thick] 
+        % table[x = Ts, y = MAE_mean, col sep = comma] 
+        % {system_id/csv/MAE_vs_Ts_SITL_x_vel_noise_l0-25_m0-2.csv_dmd_angle.csv};
+        % \addlegendentry{$l =$~\SI{0.25}{\metre}}
         
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = Ts, y = MAE_mean, col sep = comma] 
