--- a/system_id/plots/acc_sp.tex
+++ b/system_id/plots/acc_sp.tex
@@ -5,7 +5,7 @@
             xlabel = Time,
             ylabel = North acceleration setpoint,
             x unit = \si{\second},
-            y unit = \si{\metre/\second},
+            y unit = \si{\metre/\second^2},
             xmin = 100,   xmax = 200,
             ymin = -2,  ymax = 2,
             grid = major,
